# nlf

./: Cargo.toml  LICENSE  README.ZH-CN.md  README.md
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
src/: main.rs  msg.rs
tests/: cli.rs
