[package]
name = "nlf"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
authors = ["ADD-SP <add_sp@outlook.com>"]
description = "A CLI to append newline characters (LF) at the end of text file."
repository = "https://github.com/ADD-SP/nlf"
exclude = [".github/", "assets/"]

[dependencies]
clap = { version = "4", features = ["derive", "cargo", "help"] }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
